[gd_scene load_steps=4 format=2]

[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/icons/icon_128_delete_trashcan.svg" type="Texture" id=2]
[ext_resource path="res://components/dashboard/new_widget_popup/filter_widget_text_element.gd" type="Script" id=3]

[node name="FilterTextElement" type="GridContainer"]
margin_right = 77.0
margin_bottom = 52.0
custom_constants/hseparation = 5
columns = 2
script = ExtResource( 3 )

[node name="FilterDescLabel" type="Label" parent="."]
margin_right = 48.0
margin_bottom = 16.0
theme_type_variation = "LabelSmall"
text = "Filter"

[node name="Spacer" type="Control" parent="."]
margin_left = 53.0
margin_right = 77.0
margin_bottom = 16.0

[node name="FilterTextEdit" type="LineEdit" parent="."]
margin_top = 20.0
margin_right = 48.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="DeleteFilterButton" parent="." instance=ExtResource( 1 )]
margin_left = 53.0
margin_top = 20.0
margin_right = 77.0
margin_bottom = 52.0
rect_min_size = Vector2( 24, 28 )
hint_tooltip = "Add Filter"
icon_tex = ExtResource( 2 )
icon_margin = 1

[connection signal="focus_exited" from="FilterTextEdit" to="." method="_on_FilterTextEdit_focus_exited"]
[connection signal="text_entered" from="FilterTextEdit" to="." method="_on_FilterTextEdit_text_entered"]
[connection signal="pressed" from="DeleteFilterButton" to="." method="_on_DeleteFilterButton_pressed"]
